--- a/tune-filter/package.json
+++ b/tune-filter/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^5.5.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
   "devDependencies": {
